Mon Feb 12 00:10:04 2007  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-slow-hum.bse: new instrument by Stefan 
	Westerfeld and William DeVore.

Sun Feb 11 17:42:58 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* r+d-files/transpose_freq.scm: Added this little utility script which is
	useful for computing 12-TET transposed frequencies. I used it while
	turning a .bse file with hardcoded oscillator frequencies into one with
	relative frequencies to the instrument base frequency.

Thu Feb  8 20:12:51 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* test/midi-test.bse: Removed this test which is no longer needed,
	because a nicer version is in library/demo already.
	
	* test/Makefile.am:
	* test: Finally removed the test directory, which is now empty.

Wed Feb  7 21:17:42 2007  Tim Janik  <timj@gtk.org>

	* Makefile.am, configure.in: removed test/.

Wed Feb  7 21:14:39 2007  Tim Janik  <timj@gtk.org>

	* library/demo/x2-midi-test.bse: fixed license to AS-IS.

Wed Feb  7 20:33:57 2007  Tim Janik  <timj@gtk.org>

	* library/instruments/illus-vtremolo.bse: turned this into an
	illustration instrument for velocity controlled tremolo.

Wed Feb  7 20:31:26 2007  Tim Janik  <timj@gtk.org>

	* library/instruments/illus-vtremolo.bse: moved test/simple-echo.bse
	here.

Wed Feb  7 02:35:13 2007  Tim Janik  <timj@gtk.org>

	* docs/faq.doxi: added "nothing happens on Play" item which describes
	PCM debugging.

Tue Feb  6 02:34:27 2007  Tim Janik  <timj@gtk.org>

	* tools/bsewavetool.cc: added normalization command.

Tue Feb  6 00:32:05 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Disabled freak-noise-test, simple-loop-test
	and osc-test, as they are currently not really stable, since --seconds
	does not guarantee exact timing.

Mon Feb  5 04:20:07 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/freak-noise.bse: Saved with the current version of
	beast, to make the file version compatibility check happy again.
