@@ -1,0 +1,116 @@
+; BseProject
+
+(bse-version "0.7.1")
+
+(container-child "BseCSynth::BQS Bass Drum E8012"
+  (modification-time "2007-02-12 00:37:55")
+  (creation-time "2006-01-21 00:44:24")
+  (license "Provided \"as is\", WITHOUT ANY WARRANTY (http://beast.gtk.org/LICENSE-AS-IS)")
+  (author "Tim Janik, Stefan Westerfeld")
+  (blurb "Bass drum modelled after drum synthesizer from Elrad 12/1980")
+  (container-child "BseAmplifier::Amplifier-1"
+    (master-volume 1)
+    (base-level 0)
+    (ostrength 100)
+    (ctrl-exp #t)
+    (ctrl-mul #t)
+    (clevel2 100)
+    (clevel1 100)
+    (alevel2 91.139240506329116)
+    (alevel1 100)
+    (pos-y 1.46)
+    (pos-x 1.75)
+    (source-input "audio-in1" (link 1 "VCO") "audio-out")
+    (source-input "audio-in2" (link 1 "Noise-1") "noise-out")
+    (source-input "ctrl-in1" (link 1 "InstrumentInput-1") "velocity")
+    (source-input "ctrl-in2" (link 1 "SimpleADSR-1") "ctrl-out"))
+  (container-child "BseSimpleADSR::SimpleADSR-1"
+    (time-range bse-time-range-short)
+    (release-time 0)
+    (sustain-level 0)
+    (decay-time 73.91304)
+    (attack-time 0.1)
+    (pos-y -0.59)
+    (pos-x 0.04)
+    (source-input "gate-in" (link 1 "InstrumentInput-1") "gate"))
+  (container-child "BseSimpleADSR::SimpleADSR-2"
+    (time-range bse-time-range-short)
+    (release-time 0)
+    (sustain-level 0)
+    (decay-time 50)
+    (attack-time 0.1)
+    (pos-y 0.28)
+    (pos-x -3.44)
+    (source-input "gate-in" (link 1 "InstrumentInput-1") "gate"))
+  (container-child "BseStandardOsc::VCO"
+    (pulse-mod-perc 35.2999)
+    (pulse-width 50)
+    (fm-n-octaves 1)
+    (exponential-fm #f)
+    (fm-perc 100)
+    (base-freq 72.29984)
+    (wave-form bse-standard-osc-sine)
+    (pos-y 0.42)
+    (pos-x 0.03)
+    (source-input "freq-mod-in" (link 1 "Amplifier-2") "audio-out"))
+  (container-child "BseStandardOsc::LFO"
+    (pulse-mod-perc 0)
+    (pulse-width 42.54386)
+    (fm-n-octaves 1)
+    (exponential-fm #f)
+    (fm-perc 0)
+    (base-freq 30.3)
+    (wave-form bse-standard-osc-pulse)
+    (pos-y -1.44)
+    (pos-x -3.6))
+  (container-child "BseNoise::Noise-1"
+    (pos-y -2.21)
+    (pos-x -0.19))
+  (container-child "BseAmplifier::Amplifier-2"
+    (master-volume 1)
+    (base-level 100)
+    (ostrength 100)
+    (ctrl-exp #f)
+    (ctrl-mul #t)
+    (clevel2 100)
+    (clevel1 100)
+    (alevel2 16.455696202531644)
+    (alevel1 83.544303797468359)
+    (pos-y -0.935)
+    (pos-x -1.765)
+    (source-input "audio-in1" (link 1 "SimpleADSR-2") "ctrl-out")
+    (source-input "audio-in2" (link 1 "LFO") "audio-out"))
+  (container-child "BseBiquadFilter::BiquadFilter-1"
+    (gain-perc 25)
+    (fm-n-octaves 5)
+    (exponential-fm #t)
+    (fm-perc 100)
+    (gain 0)
+    (freq 25)
+    (filter-type bse-biquad-filter-resonant-lowpass)
+    (pos-y 0.255)
+    (pos-x 2.085)
+    (source-input "audio-in" (link 1 "Amplifier-1") "audio-out")
+    (source-input "freq-mod-in" (link 1 "SimpleADSR-1") "ctrl-out"))
+  (container-child "BseStandardSaturator::StandardSaturator-1"
+    (output-volume 1.0245901639344248)
+    (auto-output #t)
+    (level 97.600000000000136)
+    (saturation bse-standard-saturate-atan)
+    (pos-y -0.945)
+    (pos-x 3.205)
+    (source-input "audio-in1" (link 1 "BiquadFilter-1") "audio-out"))
+  (container-child "BseInstrumentOutput::InstrumentOutput-1"
+    (pos-y -2.06)
+    (pos-x 3.825)
+    (source-input "left-audio" (link 1 "StandardSaturator-1") "audio-out1")
+    (source-input "right-audio" (link 1 "StandardSaturator-1") "audio-out1")
+    (source-input "synth-done" (link 1 "Mult-1") "audio-out"))
+  (container-child "BseInstrumentInput::InstrumentInput-1"
+    (pos-y 1.57)
+    (pos-x -3.905))
+  (container-child "BseMult::Mult-1"
+    (pos-y -1.935)
+    (pos-x 2.035)
+    (source-input "audio-in1" (link 1 "SimpleADSR-1") "done-out")
+    (source-input "audio-in2" (link 1 "SimpleADSR-2") "done-out")))
